--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -std=c++17 -I./cpp-httplib -Wall -O2
-LDFLAGS = -lpqxx -lpq -pthread
+LDFLAGS = -lpqxx -lpq -pthread -lhiredis -lredis++
 
 SRC = $(wildcard src/*.cpp)
 OBJ = $(SRC:.cpp=.o)
