--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
-  db:
+  db-master:
     image: postgres:15
+    container_name: postgres-master
     environment:
       POSTGRES_USER: news_user
       POSTGRES_PASSWORD: news_pass
@@ -10,6 +11,39 @@ services:
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - ./db/tmp.sql:/docker-entrypoint-initdb.d/tmp.sql:ro
+      - ./db/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+      - postgres_master_data:/var/lib/postgresql/data
+    command: |
+      postgres
+      -c wal_level=replica
+      -c max_wal_senders=10
+      -c max_replication_slots=10
+      -c hot_standby=on
+      -c hba_file=/etc/postgresql/pg_hba.conf
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U news_user -d news_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  db-replica:
+    image: postgres:15
+    container_name: postgres-replica
+    environment:
+      POSTGRES_USER: news_user
+      POSTGRES_PASSWORD: news_pass
+      POSTGRES_DB: news_db
+    ports:
+      - "5434:5432"
+    volumes:
+      - postgres_replica_data:/var/lib/postgresql/data
+      - ./db/init-replica.sh:/docker-entrypoint-initdb.d/init-replica.sh:ro
+    depends_on:
+      db-master:
+        condition: service_healthy
+    command: |
+      postgres
+      -c hot_standby=on
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U news_user -d news_db"]
       interval: 5s
@@ -26,7 +60,11 @@ services:
       context: .
       dockerfile: ./server/Dockerfile
     depends_on:
-      db:
+      db-master:
         condition: service_healthy
     ports:
       - "8080:8080"
+
+volumes:
+  postgres_master_data:
+  postgres_replica_data:
