--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,27 @@ services:
     volumes:
       - ./config/researchers.xml:/usr/local/etc/vk-researcher/test_conf.xml
       - ./researchers/vk/access_token:/usr/local/etc/vk-researcher/access_token
+  backup:
+    build:
+      context: ./backups
+      dockerfile: Dockerfile
+    container_name: postgres-backup
+    environment:
+      POSTGRES_USER: news_user
+      POSTGRES_PASSWORD: news_pass
+    volumes:
+      - ./backups:/backups
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      db-master:
+        condition: service_healthy
+      db-replica:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "ps aux | grep cron | grep -v grep"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 volumes:
   postgres_master_data:
