--- a/server/Makefile
+++ b/server/Makefile
@@ -1,8 +1,13 @@
 CXX = g++
-CXXFLAGS = -std=c++17 -I./cpp-httplib -Wall -O2
+CXXFLAGS = -std=c++17 -I./cpp-httplib -Isrc -Wall -O2 -Isrc
 LDFLAGS = -lpqxx -lpq -pthread -lhiredis -lredis++
 
-SRC = $(wildcard src/*.cpp)
+SRC = src/models/Constants.cpp \
+      src/utils/CacheManager.cpp \
+      src/PgPool/PgPool.cpp \
+      src/handlers/handlers.cpp \
+      src/main.cpp
+      
 OBJ = $(SRC:.cpp=.o)
 TARGET = server
 
@@ -16,3 +21,5 @@ $(TARGET): $(OBJ)
 
 clean:
 	rm -f $(OBJ) $(TARGET)
+
+.PHONY: all clean
