--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,46 @@ services:
       retries: 5
       start_period: 40s
 
+ # MongoDB Monitoring
+  mongodb-exporter:
+    image: percona/mongodb_exporter:0.40
+    container_name: mongodb-exporter
+    command:
+      - "--mongodb.uri=mongodb://monitor:monitor_pass@mongodb:27017/admin?authSource=admin"
+      - "--collector.database"
+      - "--collector.collstats"
+      - "--collector.indexstats"
+      - "--collector.replset"
+      - "--collector.connpoolstats"
+      - "--collector.topmetrics"
+    ports:
+      - "9216:9216"
+    depends_on:
+      mongodb:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:9216/metrics"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  mongodb-express:
+    image: mongo-express:latest
+    container_name: mongodb-express
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: mongopass
+      ME_CONFIG_MONGODB_URL: mongodb://admin:mongopass@mongodb:27017/?authSource=admin
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin123
+    ports:
+      - "8081:8081"
+    depends_on:
+      mongodb:
+        condition: service_healthy
+    restart: unless-stopped
+
   mongodb-secondary-1:
     image: mongo:7
     container_name: mongodb-secondary-1
