--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -217,38 +217,38 @@ services:
       - ./researchers/vk/access_token:/usr/local/etc/vk-researcher/access_token
     restart: unless-stopped
 
-  researcher-reddit:
-    build:
-      context: .
-      dockerfile: ./researchers/reddit/Dockerfile
-    depends_on:
-      server:
-        condition: service_started
-    volumes:
-      - ./config/researchers.xml:/usr/local/etc/reddit-researcher/test_conf.xml
-      - ./researchers/reddit/access_data:/usr/local/etc/reddit-researcher/access_data
-      - ./researchers/reddit/token_cache.json:/usr/local/etc/reddit-researcher/token_cache.json
-
-  data-generator:
-    build:
-      context: ./data-generator
-      dockerfile: Dockerfile
-    container_name: data-generator
-    depends_on:
-      server:
-        condition: service_healthy
-    environment:
-      - API_URL=http://server:8080
-      - BATCH_SIZE=3
-      - DELAY_BETWEEN_RUNS=45
-      - MAX_CYCLES=0
-      - LOG_LEVEL=info
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://server:8080/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+  # researcher-reddit:
+  #   build:
+  #     context: .
+  #     dockerfile: ./researchers/reddit/Dockerfile
+  #   depends_on:
+  #     server:
+  #       condition: service_started
+  #   volumes:
+  #     - ./config/researchers.xml:/usr/local/etc/reddit-researcher/test_conf.xml
+  #     - ./researchers/reddit/access_data:/usr/local/etc/reddit-researcher/access_data
+  #     - ./researchers/reddit/token_cache.json:/usr/local/etc/reddit-researcher/token_cache.json
+  #
+  # data-generator:
+  #   build:
+  #     context: ./data-generator
+  #     dockerfile: Dockerfile
+  #   container_name: data-generator
+  #   depends_on:
+  #     server:
+  #       condition: service_healthy
+  #   environment:
+  #     - API_URL=http://server:8080
+  #     - BATCH_SIZE=3
+  #     - DELAY_BETWEEN_RUNS=45
+  #     - MAX_CYCLES=0
+  #     - LOG_LEVEL=info
+  #   restart: unless-stopped
+  #   healthcheck:
+  #     test: ["CMD", "wget", "--spider", "-q", "http://server:8080/health"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
   
   # Backup сервис
   backup:
